--- a/client/css/style.css
+++ b/client/css/style.css
@@ -37,14 +37,14 @@ body {
 }
 
 .jumbotron h1 {
-   color: #202020;
+   color: black;
    font-size: 72px;
    font-weight: bold;
    font-family: "Shift", sans-serif;
 }
 
 .jumbotron p {
-   color: green;
+   color: #68be8d;
    font-size: 20px;
 }
 
