--- a/client/css/style.css
+++ b/client/css/style.css
@@ -25,7 +25,7 @@ body {
 /* Jumbotron Title Panel */
 .jumbotron {
    height: 450px;
-   background-image: url("http://duho.sofkenforum.com/images/cover.jpg");
+   background-image: url("http://duho.sofkenforum.com.client/images/cover.jpg");
    background-repeat: no-repeat;
    background-size: cover;
 }
